fix some spacing issues

--- a/src/app/+contact/contact.component.scss
+++ b/src/app/+contact/contact.component.scss
@@ -20,7 +20,10 @@
   justify-content: center;
   align-items: center;
 }
-
+#contact-number {
+  width: 100%;
+  margin-bottom: 50px;
+}
 #contact-number__title, #business-address__title {
   margin-top: 50px;
   font-family: $metropolis;
