--- a/src/app/+home/coaches-bucket/coaches-bucket.component.scss
+++ b/src/app/+home/coaches-bucket/coaches-bucket.component.scss
@@ -91,6 +91,7 @@
   font-size: 1em;
   #content {
     margin-top: 50px;
+    margin-left: 50px;
   }
   #coach-description {
     max-width: 600px;
