--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -15,15 +15,26 @@
   }
 }
 
+#left-side {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
 #main-content {
   display: flex;
   flex: 1;
   flex-flow: column nowrap;
+  margin-top: 20px;
   justify-content: space-around;
+  @include respond-to(medium) {
+    margin-top: 0;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+  }
   font-size: 1.1em;
   position: relative;
   #contact-info {
-    margin-top: 20px;
     display: block;
     order: -5;
     @include respond-to(medium) {
@@ -98,23 +109,15 @@
 }
 
 #copyright {
-  order: 5;
   font-size: 0.8em;
   font-family: $roboto;
 }
 
 #social-buttons {
-  align-self: flex-start;
   padding: 10px 0;
-  @include respond-to(medium) {
-    align-self: flex-end;
-    position: absolute;
-    top: 5px;
-  }
   $icon-size: 36px;
   height: $icon-size;
   color: white;
-  order: -3;
 
   a {
     color: white;
